fixed stage1 loading, fixed opening

--- a/game/style.css
+++ b/game/style.css
@@ -21,27 +21,30 @@ body {
 /* 
 author: 황서진
 */
-#startPage{
+#startPage {
     margin: 0 auto;
     padding-top: 60px;
+    display: none;
     width: 1280px;
     height: 860px;
     text-align: center;
     background: url("../images/Kirby_Star_Allies-03.jpg");
 }
-#title_start{
+#title_start {
     margin: 0 auto;
     width: 500px;
     height: 210px;
     background: url("../images/kirby-logo.png");
 }
 
-#title_start:hover, #title_stage:hover, #stagecleartitle:hover, #stageselecttitle:hover{
+#title_start:hover,
+#title_stage:hover,
+#stagecleartitle:hover,
+#stageselecttitle:hover {
     filter: drop-shadow(5px 5px 5px #000);
-
 }
 
-#main_start{
+#main_start {
     margin-left: 500px;
     margin-top: 100px;
 }
@@ -50,13 +53,13 @@ author: 황서진
     width: 280px;
     height: 80px;
     padding: 1.5em 3em;
-    border-color: #4466BF;
+    border-color: #4466bf;
     border-width: thick;
     border-radius: 50px;
     margin-bottom: 40px;
     font-size: 19px;
-    font-family: 'Titan One', cursive;
-    background: #FFE423;
+    font-family: "Titan One", cursive;
+    background: #ffe423;
     color: #37474f;
     display: flex;
     align-items: center;
@@ -65,50 +68,51 @@ author: 황서진
     cursor: pointer;
     -webkit-transition: background-color 0.3s, color 0.3s;
     transition: background-color 0.3s, color 0.3s;
-
 }
 
-.btn_start:hover, .stagebtn:hover {
-  -webkit-transition: background-color 0.1s 0.3s, color 0.1s 0.3s;
-  transition: background-color 0.1s 0.3s, color 0.1s 0.3s;
-  border-color: #d76747;
-  color: #ECEFF1;
-  background-color: #d76747;
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
-  -webkit-animation: ani_start_1 0.3s forwards;
-  animation: ani_start_1 0.3s forwards;
+.btn_start:hover,
+.stagebtn:hover {
+    -webkit-transition: background-color 0.1s 0.3s, color 0.1s 0.3s;
+    transition: background-color 0.1s 0.3s, color 0.1s 0.3s;
+    border-color: #d76747;
+    color: #eceff1;
+    background-color: #d76747;
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+        0 17px 50px 0 rgba(0, 0, 0, 0.19);
+    -webkit-animation: ani_start_1 0.3s forwards;
+    animation: ani_start_1 0.3s forwards;
 }
 
-.btn_start:hover::before, .stagebtn:hover::before {
-  -webkit-animation: ani_start_2 0.3s 0.3s forwards;
-  animation: ani_start_2 0.3s 0.3s forwards;
+.btn_start:hover::before,
+.stagebtn:hover::before {
+    -webkit-animation: ani_start_2 0.3s 0.3s forwards;
+    animation: ani_start_2 0.3s 0.3s forwards;
 }
 
 @keyframes ani_start_1 {
-  60% {
-    -webkit-transform: scale3d(0.8, 0.8, 1);
-    transform: scale3d(0.8, 0.8, 1);
-  }
-  85% {
-    -webkit-transform: scale3d(1.1, 1.1, 1);
-    transform: scale3d(1.1, 1.1, 1);
-  }
-  100% {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
-  }
+    60% {
+        -webkit-transform: scale3d(0.8, 0.8, 1);
+        transform: scale3d(0.8, 0.8, 1);
+    }
+    85% {
+        -webkit-transform: scale3d(1.1, 1.1, 1);
+        transform: scale3d(1.1, 1.1, 1);
+    }
+    100% {
+        -webkit-transform: scale3d(1, 1, 1);
+        transform: scale3d(1, 1, 1);
+    }
 }
 
 @keyframes ani_start_2 {
-  to {
-    opacity: 0;
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
-  }
+    to {
+        opacity: 0;
+        -webkit-transform: scale3d(1, 1, 1);
+        transform: scale3d(1, 1, 1);
+    }
 }
 
-
-#stageSelect{
+#stageSelect {
     display: none;
     margin: 0 auto;
     /*padding-top: 60px;*/
@@ -118,18 +122,18 @@ author: 황서진
     background: url("../images/stage_back.jpg");
 }
 
-p#stageselecttitle{
+p#stageselecttitle {
     font-size: 95px;
-    font-family: 'Titan One', cursive;
+    font-family: "Titan One", cursive;
     -webkit-text-stroke: 3px black;
-    color: #FFE423;
+    color: #ffe423;
     text-align: center;
     margin: 0 auto;
     padding-top: 80px;
     padding-bottom: 60px;
 }
 
-#stage_btn{
+#stage_btn {
     margin-left: 500px;
     padding-top: 50px;
     width: 500px;
@@ -137,28 +141,26 @@ p#stageselecttitle{
     text-align: center;
 }
 
-.stagebtn{
+.stagebtn {
     width: 280px;
     height: 70px;
     padding: 1.5em 3em;
-    border-color: #4466BF;
+    border-color: #4466bf;
     border-width: thick;
     border-radius: 50px;
     margin-bottom: 50px;
     font-size: 19px;
-    font-family: 'Titan One', cursive;
-    background: #FFE423;
+    font-family: "Titan One", cursive;
+    background: #ffe423;
     color: #37474f;
     display: flex;
     align-items: center;
     text-align: center;
-    justify-content: center; 
+    justify-content: center;
     cursor: pointer;
     -webkit-transition: background-color 0.3s, color 0.3s;
     transition: background-color 0.3s, color 0.3s;
 }
-
-
 
 div#opening {
     margin: 0 auto;
@@ -188,20 +190,20 @@ div#gameClear {
     height: 920px;
 }
 
-p#stagecleartitle{
+p#stagecleartitle {
     font-size: 90px;
-    font-family: 'Titan One', cursive;
+    font-family: "Titan One", cursive;
     -webkit-text-stroke: 3px black;
-    color: #FFE423;
+    color: #ffe423;
     text-align: center;
     margin: 0 auto;
     padding-top: 60px;
     padding-bottom: 50px;
 }
 
-p#result{
+p#result {
     font-size: 23px;
-    font-family: 'Titan One', cursive;
+    font-family: "Titan One", cursive;
     background-color: white;
     border-color: yellow;
     border-radius: 8px;
@@ -211,10 +213,10 @@ p#result{
     margin: 0 auto;
 }
 
-#introducePage{
+#introducePage {
     display: none;
 }
-.page{
+.page {
     margin: 0 auto;
     margin-top: 20px;
     display: none;
@@ -227,17 +229,19 @@ p#result{
     opacity: 0.8;
 }
 
-
-.settitle, .ruletitle{
+.settitle,
+.ruletitle {
     margin: 0 auto;
     padding-top: 40px;
     padding-bottom: 40px;
     text-align: center;
     font-size: 23px;
-    font-family: 'Titan One', cursive;
+    font-family: "Titan One", cursive;
 }
 
-.settingbgm, .settingsound, .settingskin{
+.settingbgm,
+.settingsound,
+.settingskin {
     width: 40px;
     height: 40px;
     border: 2px solid #bcbcbc;
@@ -246,47 +250,52 @@ p#result{
     cursor: pointer;
 }
 
-.on{
-   background-color: #4793d7; 
-   color: white;
+.on {
+    background-color: #4793d7;
+    color: white;
 }
 
-.on_2{
-   background-color: #e482b5; 
-   color: white;
+.on_2 {
+    background-color: #e482b5;
+    color: white;
 }
 
-.on_3{
-   background-color: #91d745; 
-   color: white;
+.on_3 {
+    background-color: #91d745;
+    color: white;
 }
 
-.off{
+.off {
     background-color: none;
 }
 
-#nextButton{
+#nextButton {
     margin-top: 50px;
     width: 100px;
     height: 60px;
     border: 2px solid #bcbcbc;
     cursor: pointer;
     font-size: 21px;
-    font-family: 'Titan One', cursive;
-    background-color: #FFE423;
+    font-family: "Titan One", cursive;
+    background-color: #ffe423;
 }
 
-#back_rule, #back_set, #next_rule{
+#back_rule,
+#back_set,
+#next_rule {
     margin-top: 50px;
     width: 70px;
     height: 50px;
     border: 2px solid #bcbcbc;
     cursor: pointer;
     font-size: 21px;
-    font-family: 'Titan One', cursive;
+    font-family: "Titan One", cursive;
 }
 
-#back_set:hover, #back_rule:hover, #next_rule:hover, #nextButton:hover{
+#back_set:hover,
+#back_rule:hover,
+#next_rule:hover,
+#nextButton:hover {
     background-color: #4793d7;
     color: white;
 }
@@ -367,64 +376,63 @@ div#top #right {
     line-height: 50px;
 }
 
-
 /*설명이미지, 게임오버 이미지, 크레딧이미지*/
-#introduceImg{
+#introduceImg {
     width: 1280px;
     height: 800px;
     margin-top: 0;
 }
-#gameoverImg{
+#gameoverImg {
     width: 600px;
     height: 300px;
     margin-top: 170px;
 }
-#resetButton{
+#resetButton {
     margin-top: 10px;
     width: 100px;
     height: 40px;
 }
-#credit{
+#credit {
     width: 1280px;
     height: 800px;
     margin-top: 0px;
 }
 
-div#gameAllClear{
+div#gameAllClear {
     display: none;
     margin: 0 auto;
     width: 1280px;
     height: 920px;
 }
 
-#line1{
+#line1 {
     color: white;
     display: none;
 }
-#line2{
+#line2 {
     color: white;
     display: none;
 }
-#line3{
+#line3 {
     color: white;
     display: none;
 }
 
-#opening1{
+#opening1 {
     display: none;
     width: 1280px;
     height: 800px;
     margin-top: 0px;
 }
 
-#opening2{
+#opening2 {
     display: none;
     width: 1280px;
     height: 800px;
     margin-top: 0px;
 }
 
-#opening3{
+#opening3 {
     display: none;
     width: 1280px;
     height: 800px;
@@ -448,4 +456,3 @@ div#gameAllClear{
     width: 1280px;
     height: 920px;
 }*/
-
