--- a/game/style.css
+++ b/game/style.css
@@ -393,6 +393,8 @@ div#bottom {
     width: 1280px;
     height: 80px;
     background-color: #4793d7;
+    color: white;
+    font-size: 24px;
     margin: 0 auto;
 }
 
